set copyright year to 2004

--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -90,7 +90,7 @@ APP_TITLE=LimeWire: Gnutella network futtat\u00e1sa
 ABOUT_TITLE=Ismertet\u0151 LimeWire
 ABOUT_LABEL_START=LimeWire \u00dcgyf\u00e9l
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright @2000-2002 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=Ismertet\u0151 LimeWire
 ABOUT_BUTTON_LABEL=OK
 #??? ABOUT_BUTTON_TIP=Close the About window
@@ -229,7 +229,7 @@ MENU_HELP_ABOUT_MNEMONIC=I
 MENU_HELP_ABOUT_ACCESSIBLE=LimeWire inform\u00e1ci\u00f3
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_DOWNLOAD_BUTTON_LABEL=Let\u00f6lt\u00e9s
 SEARCH_DOWNLOAD_BUTTON_TIP=Minden kiv\u00e1lasztott file let\u00f6lt\u00e9se
@@ -310,7 +310,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Kiv\u00e1lasztott fileok elt\u00e1vol\u00edt\u00e1sa 
 PLAYLIST_FILE_DESCRIPTION=Lej\u00e1tsz\u00f3lista (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Lej\u00e1tsz\u00f3
 #??? MEDIA_PLAY_BUTTON_TIP=Play
@@ -324,7 +324,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Felhaszn\u00e1l\u00f3n\u00e9v
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Jelsz\u00f3
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=el\u00e9rhet\u0151
 STATISTICS_FILES=fileok
