--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -11,7 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=\uad6d\uc81c
 LOCALE_SCRIPT_CODE=Hang
 LOCALE_SCRIPT_NAME=Hangul
-LOCALE_ENGLISH_LANGUAGE_NAME=Korean
+LOCALE_ENGLISH_LANGUAGE_NAME=Far-East Asian
 #UTF-8 file edited with Notepad/Windows 2000, and a "Gulim" or "GulimChe" font.
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -90,7 +90,7 @@ APP_TITLE=LimeWire: \uadf8\ub204\ud154\ub77c \ub124\ud2b8\uc6cc\ud06c
 ABOUT_TITLE=LimeWire \uc815\ubcf4
 ABOUT_LABEL_START=\ub77c\uc784\uc640\uc774\uc5b4 \ud074\ub77c\uc774\uc5b8\ud2b8
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright @2000-2002 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=LimeWire \uc815\ubcf4
 ABOUT_BUTTON_LABEL=\ud655\uc778
 ABOUT_BUTTON_TIP=\uc815\ubcf4 \ucc3d \ub2eb\uae30
@@ -229,7 +229,7 @@ MENU_HELP_ABOUT_MNEMONIC=A
 #??? MENU_HELP_ABOUT_ACCESSIBLE=Information about LimeWire
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 #??? SEARCH_DOWNLOAD_BUTTON_TIP=Download all selected files
@@ -312,7 +312,7 @@ PLAYLIST_DELETE_BUTTON_LABEL=\uc0ad\uc81c
 #??? PLAYLIST_FILE_DESCRIPTION=Playlist files (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 #??? MEDIA_PLAYER_DEFAULT_STRING=LimeWire media player
 #??? MEDIA_PLAY_BUTTON_TIP=Play
@@ -326,7 +326,7 @@ MEDIA_REWIND_BUTTON_TIP=\ub4a4\ub85c
 #??? PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Password
 
 ################################################################################
-# Key/value pairs for Statistics string....
+# Key/value pairs for Statistics string...
 ################################################################################
 #??? STATISTICS_AVAILABLE=available
 #??? STATISTICS_FILES=files
@@ -481,7 +481,7 @@ LIBRARY_TABLE_UPLOAD_COUNT=\uc62c\ub824\ub193\uae30
 #??? PLAYLIST_OPTIONS_CONTINUE=Continuous
 #??? PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 #??? PLAYLIST_DIALOG_OPEN_TITLE=Select playlist (.m3u)
-#??? PLAYLIST_DIALOG_SAVE_TITLE=Save playlist as....
+#??? PLAYLIST_DIALOG_SAVE_TITLE=Save playlist as...
 #??? PLAYLIST_DIALOG_SAVE_SAVE=Save
 
 ################################################################################
