--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -90,7 +90,7 @@ APP_TITLE=LimeWire: ruleaza in reteaua Gnutella
 ABOUT_TITLE=Despre LimeWire
 ABOUT_LABEL_START=Clientul LimeWire
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright @2000-2002 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=Despre LimeWire
 ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Inchide fereastra despre LimeWire
@@ -229,7 +229,7 @@ MENU_HELP_ABOUT_MNEMONIC=D
 MENU_HELP_ABOUT_ACCESSIBLE=Informatii despre LimeWire
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_DOWNLOAD_BUTTON_LABEL=Descarca
 SEARCH_DOWNLOAD_BUTTON_TIP=Descarca toate fisierele selectate
@@ -310,7 +310,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Elimina fisierul selectat din playlist
 PLAYLIST_FILE_DESCRIPTION=Fisiere playlist (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Player
 MEDIA_PLAY_BUTTON_TIP=Lanseaza
@@ -324,7 +324,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Nume utilizator
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Parola
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=accesibil
 STATISTICS_FILES=fisiere publice
@@ -477,7 +477,7 @@ PLAYLIST_OPTIONS_STRING=Optiuni:
 PLAYLIST_OPTIONS_CONTINUE=Continuu
 PLAYLIST_OPTIONS_SHUFFLE=Amesteca
 PLAYLIST_DIALOG_OPEN_TITLE=Selecteaza playlist (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Salveaza playlist-ul ca....
+PLAYLIST_DIALOG_SAVE_TITLE=Salveaza playlist-ul ca...
 PLAYLIST_DIALOG_SAVE_SAVE=Salveaza
 
 ################################################################################
