--- a/lib/messagebundles/MessagesBundle_sv.properties
+++ b/lib/messagebundles/MessagesBundle_sv.properties
@@ -92,7 +92,7 @@ GENERAL_UNIT_KBPSEC=KB/s
 ABOUT_TITLE=Om LimeWire
 ABOUT_LABEL_START=LimeWire klient
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright @2000-2002 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=Om LimeWire
 ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Stäng informationsfönstret
@@ -234,7 +234,7 @@ MENU_HELP_ABOUT_MNEMONIC=O
 MENU_HELP_ABOUT_ACCESSIBLE=Information om LimeWire
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_DOWNLOAD_BUTTON_LABEL=Ladda ned
 SEARCH_DOWNLOAD_BUTTON_TIP=Ladda ned alla valda filer
@@ -319,7 +319,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Ta bort vald fil från spellistan
 PLAYLIST_FILE_DESCRIPTION=Spellista filer (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire Mediaspelare
 #??? MEDIA_PLAY_BUTTON_TIP=Play
@@ -333,7 +333,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Användarnamn
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Lösenord
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=tillgängliga
 STATISTICS_FILES=filer
@@ -490,7 +490,7 @@ PLAYLIST_OPTIONS_STRING=Uppspelningsinställningar:
 PLAYLIST_OPTIONS_CONTINUE=Kontinuerlig
 PLAYLIST_OPTIONS_SHUFFLE=Blanda
 PLAYLIST_DIALOG_OPEN_TITLE=Välj spellista (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Spara spellista som....
+PLAYLIST_DIALOG_SAVE_TITLE=Spara spellista som...
 PLAYLIST_DIALOG_SAVE_SAVE=Spara
 
 ################################################################################
