--- a/lib/messagebundles/MessagesBundle_is.properties
+++ b/lib/messagebundles/MessagesBundle_is.properties
@@ -92,7 +92,7 @@ GENERAL_UNIT_KBPSEC=KB/sek
 ABOUT_TITLE=Um LimeWire
 ABOUT_LABEL_START=LimeWire biðlari
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright @2000-2002 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=Um LimeWire
 ABOUT_BUTTON_LABEL=Í lagi
 ABOUT_BUTTON_TIP=Loka Um LimeWire glugganum
@@ -234,7 +234,7 @@ MENU_HELP_ABOUT_MNEMONIC=U
 MENU_HELP_ABOUT_ACCESSIBLE=Upplýsingar um LimeWire
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_DOWNLOAD_BUTTON_LABEL=Sækja
 SEARCH_DOWNLOAD_BUTTON_TIP=Sækja allar valdar skrár
@@ -319,7 +319,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Eyða út völdum skrám úr lista
 PLAYLIST_FILE_DESCRIPTION=Tilbúinn lista skrár (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire spilarinn
 MEDIA_PLAY_BUTTON_TIP=Ræsa
@@ -333,7 +333,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Notendanafn
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Lykilorð
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=aðgengilegar
 STATISTICS_FILES=skrár
@@ -490,7 +490,7 @@ PLAYLIST_OPTIONS_STRING=Spilunarmöguleikar:
 PLAYLIST_OPTIONS_CONTINUE=Endurtaka
 PLAYLIST_OPTIONS_SHUFFLE=Stokka
 PLAYLIST_DIALOG_OPEN_TITLE=Velja lista (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Vista lista sem....
+PLAYLIST_DIALOG_SAVE_TITLE=Vista lista sem...
 PLAYLIST_DIALOG_SAVE_SAVE=Vista
 
 ################################################################################
