--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -92,7 +92,7 @@ NO=\u05dc\u05b9\u05d0
 #??? ABOUT_TITLE=About LimeWire
 ABOUT_LABEL_START=LimeWire \u05dc\u05b8\u05e7\u05d5\u05b9\u05d7\u05b7
 #??? ABOUT_LABEL_ADDRESS=http://www.limewire.com
-#??? ABOUT_LABEL_END=Copyright @2000-2002 Lime Wire LLC
+#??? ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 #??? ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_BUTTON_LABEL=\u05d0\u05d5\u05b9
 #??? ABOUT_BUTTON_TIP=Close the About window
@@ -234,7 +234,7 @@ MENU_HELP_TITLE_MNEMONIC=H
 #??? MENU_HELP_ABOUT_ACCESSIBLE=Information about LimeWire
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 #??? SEARCH_DOWNLOAD_BUTTON_TIP=Download all selected files
@@ -321,7 +321,7 @@ SEARCH_STOP_BUTTON_LABEL=\u05e8\u05d2\u05e2
 #??? PLAYLIST_FILE_DESCRIPTION=PlayList files (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 #??? MEDIA_PLAYER_DEFAULT_STRING=LimeWire media player
 #??? MEDIA_PLAY_BUTTON_TIP=Play
@@ -335,7 +335,7 @@ SEARCH_STOP_BUTTON_LABEL=\u05e8\u05d2\u05e2
 #??? PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Password
 
 ################################################################################
-# Key/value pairs for Statistics string....
+# Key/value pairs for Statistics string...
 ################################################################################
 #??? STATISTICS_AVAILABLE=available
 #??? STATISTICS_FILES=files
@@ -494,7 +494,7 @@ SEARCH_STOP_BUTTON_LABEL=\u05e8\u05d2\u05e2
 #??? PLAYLIST_OPTIONS_CONTINUE=Continuous
 #??? PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 #??? PLAYLIST_DIALOG_OPEN_TITLE=Select playlist (.m3u)
-#??? PLAYLIST_DIALOG_SAVE_TITLE=Save playlist as....
+#??? PLAYLIST_DIALOG_SAVE_TITLE=Save playlist as...
 #??? PLAYLIST_DIALOG_SAVE_SAVE=Save
 
 ################################################################################
