Minor typo in one resource key

--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -389,7 +389,7 @@ RESULT_PANEL_CHAT=\u05e9\u05d7\u05d7
 RESULT_PANEL_LOCATION=\u05de\u05d9\u05e7\u05d5\u05dd
 RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=\u05e1\u05e4\u05e7
-RRESULT_PANEL_ADDED=\u05e0\u05d5\u05e6\u05e8
+RESULT_PANEL_ADDED=\u05e0\u05d5\u05e6\u05e8
 
 #Filter labels.
 SEARCH_FILTER_ALL=\u05db\u05d5\u05dc\u05dd
