Two more translations

--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -491,7 +491,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Aika
 DOWNLOAD_SERVER_COLUMN=Valmistaja/versio
 DOWNLOAD_STATUS_QUEUED=Jonossa
 DOWNLOAD_STATUS_CONNECTING=Otan yhteyttä...
-#??? DOWNLOAD_STATUS_WAITING=Waiting for busy hosts
+#??? DOWNLOAD_STATUS_WAITING=Odottaa, varattu
 DOWNLOAD_STATUS_COMPLETE=Valmis
 DOWNLOAD_STATUS_ABORTED=Keskeytetty
 DOWNLOAD_STATUS_FAILED=Ei voitu ladata
@@ -1060,7 +1060,7 @@ OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_PLAYER_MAIN_TITLE=Soitin
 OPTIONS_ITUNES_MAIN_TITLE=iTunes
 #??? OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Importing
-#??? OPTIONS_ITUNES_DAAP_MAIN_TITLE=Sharing
+OPTIONS_ITUNES_DAAP_MAIN_TITLE=Jako
 OPTIONS_APPS_MAIN_TITLE=Apuohjelmat
 OPTIONS_BUGS_MAIN_TITLE=Virheraportit
 OPTIONS_GUI_MAIN_TITLE=Käyttöliittymää
