--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1598,7 +1598,7 @@ STATS_QUERY_REQUEST_HOPS_TITLE=Hops
 STATS_QUERY_REQUEST_HOPS_LABEL=All received queries, by hops.
 STATS_QUERY_REQUEST_TTL_TITLE=TTL
 STATS_QUERY_REQUEST_TTL_LABEL=All received queries, by time to live (TTL).
-# Advanced Gnutella Message special queries
+# Advanced Gnutella Message Special queries
 STATS_SPECIAL_QUERIES_TITLE=Special Queries
 STATS_SPECIAL_QUERIES_LABEL=All of the special marked queries.
 # Advanced Gnutella Message hops/ttl for query hits
