--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2030,8 +2030,8 @@ RECEIVED_ALL_TCP_MESSAGES=TCP Messages
 RECEIVED_ALL_UDP_MESSAGES=UDP Messages
 RECEIVED_ALL_MULTICAST_MESSAGES=Multicast Messages
 # Advanced Gnutella Received Messages Duplicate queries
-RECEIVED_TCP_DUPLICATE_QUERIES=Duplicates
-RECEIVED_MULTICAST_DUPLICATE_QUERIES=Duplicates
+RECEIVED_TCP_DUPLICATE_QUERIES=Duplicates TCP
+RECEIVED_MULTICAST_DUPLICATE_QUERIES=Duplicates Multicast
 
 # Advanced Gnutella Received Kilobytes Total
 ALL_RECEIVED_BYTES=Received
