added ability to pause downloads.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -398,15 +398,17 @@ SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Media
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
-DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Download
-DOWNLOAD_KILL_BUTTON_LABEL=Kill Download
+DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_TIP=Stop Selected Downloads
 DOWNLOAD_RESUME_BUTTON_LABEL=Resume
 DOWNLOAD_RESUME_BUTTON_TIP=Try to Reattempt a Download
 DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
-DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Sources for Failed Download
+DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Sources for Failed Downloads
 DOWNLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 DOWNLOAD_CLEAR_BUTTON_TIP=Remove Inactive Downloads
+DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
+DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Launch
 LIBRARY_LAUNCH_BUTTON_TIP=Launch Selected Files
@@ -510,6 +512,8 @@ DOWNLOAD_HOST_LABEL=host
 DOWNLOAD_STATUS_REMOTE_QUEUED=Waiting in Line, Position
 DOWNLOAD_STATUS_HASHING=Verifying File Contents...
 DOWNLOAD_STATUS_SAVING=Saving File...
+DOWNLOAD_STATUS_PAUSING=Pausing...
+DOWNLOAD_STATUS_PAUSED=Paused
 DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
