added ability to pause downloads.

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -398,7 +398,7 @@ SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Média
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Aperçu
-DOWNLOAD_LAUNCH_BUTTON_TIP=Lance un aperçu du téléchargement sélectionné.
+DOWNLOAD_LAUNCH_BUTTON_TIP=Lance un aperçu des téléchargements sélectionnés.
 DOWNLOAD_KILL_BUTTON_LABEL=Arrêter
 DOWNLOAD_KILL_BUTTON_TIP=Arrête les téléchargements sélectionnés.
 DOWNLOAD_RESUME_BUTTON_LABEL=Reprendre
@@ -407,6 +407,8 @@ DOWNLOAD_SOURCES_BUTTON_LABEL=Autres sources
 DOWNLOAD_SOURCES_BUTTON_TIP=Tente de trouver d'autres sources après un échec de téléchargement.
 DOWNLOAD_CLEAR_BUTTON_LABEL=Effacer inactifs
 DOWNLOAD_CLEAR_BUTTON_TIP=Ôte les téléchargements inactifs.
+DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
+DOWNLOAD_PAUSE_BUTTON_TIP=Suspend provisoirement les téléchargements sélectionnés.
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Lancer
 LIBRARY_LAUNCH_BUTTON_TIP=Ouvre ou exécute les fichiers sélectionnés.
@@ -510,6 +512,8 @@ DOWNLOAD_HOST_LABEL=hôte
 DOWNLOAD_STATUS_REMOTE_QUEUED=Mis en attente en position
 DOWNLOAD_STATUS_HASHING=Verifie l'intégrité du fichier...
 DOWNLOAD_STATUS_SAVING=Sauvegarde du fichier...
+DOWNLOAD_STATUS_PAUSING=Suspension en cours...
+DOWNLOAD_STATUS_PAUSED=Suspendu
 DOWNLOAD_AWAITING_SOURCES=En attente d'autres sources...
 DOWNLOAD_APPLY_NEW_THEME_START=Vous avez téléchargé un nouveau thème intitulé "
 DOWNLOAD_APPLY_NEW_THEME_END=." Voulez-vous utiliser ce nouveau thème\u00a0?
