new messages for prioritizing downloads.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -34,6 +34,7 @@ HAS_TIPS_OF_THE_DAY=false
 ################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
+NO_TEXT=
 GENERAL_OK_BUTTON_LABEL=OK
 GENERAL_OK_BUTTON_TIP=Apply Operation.
 GENERAL_CANCEL_BUTTON_LABEL=Cancel
@@ -483,6 +484,7 @@ DOWNLOAD_POPUP_MENU_RESUME=Force Resume
 DOWNLOAD_POPUP_MENU_LAUNCH=Preview File
 DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
+DOWNLOAD_PRIORITY_COLUMN=Priority
 DOWNLOAD_NAME_COLUMN=Name
 DOWNLOAD_SIZE_COLUMN=Size
 DOWNLOAD_STATUS_COLUMN=Status
@@ -525,6 +527,10 @@ DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your 
 DOWNLOAD_MAGNET_DIALOG=Would you like to download
 DOWNLOAD_FROM=from
 DOWNLOAD_MAGNET_DIALOG_END=?
+DOWNLOAD_PRIORITY_ACTIVE=Active
+DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
+DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
+DOWNLOAD_PRIORITY_PRIORITIZE=Queue
 
 ###################################################################
 # Key/value pairs for UploadView
