Messages for prioritization of queued transfers

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -34,6 +34,7 @@ HAS_TIPS_OF_THE_DAY=true
 ################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
+NO_TEXT=
 GENERAL_OK_BUTTON_LABEL=Valider
 GENERAL_OK_BUTTON_TIP=Confirme l'opération affichée.
 GENERAL_CANCEL_BUTTON_LABEL=Annuler
@@ -483,6 +484,7 @@ DOWNLOAD_POPUP_MENU_RESUME=Reprendre le téléchargement
 DOWNLOAD_POPUP_MENU_LAUNCH=Lancer le fichier
 DOWNLOAD_POPUP_MENU_CHAT=Discuter avec l'hôte
 DOWNLOAD_POPUP_MENU_BROWSE=Parcourir l'hôte
+DOWNLOAD_PRIORITY_COLUMN=Priorité
 DOWNLOAD_NAME_COLUMN=Nom
 DOWNLOAD_SIZE_COLUMN=Taille
 DOWNLOAD_STATUS_COLUMN=État
@@ -491,7 +493,7 @@ DOWNLOAD_PROGRESS_COLUMN=Progression
 DOWNLOAD_SPEED_COLUMN=Vitesse
 DOWNLOAD_TIME_REMAINING_COLUMN=Temps
 DOWNLOAD_SERVER_COLUMN=Marque/Version
-DOWNLOAD_STATUS_QUEUED=Mis en attente
+DOWNLOAD_STATUS_QUEUED=En file d'attente
 DOWNLOAD_STATUS_CONNECTING=Connexion...
 DOWNLOAD_STATUS_WAITING=Attente, hôtes occupés
 DOWNLOAD_STATUS_COMPLETE=Terminé
@@ -509,7 +511,7 @@ DOWNLOAD_STATUS_WAITING_FOR_USER=Besoin d'autres sources
 DOWNLOAD_STATUS_WAITING_FOR_CONN=Attente de connexions stables
 DOWNLOAD_HOSTS_LABEL=hôtes
 DOWNLOAD_HOST_LABEL=hôte
-DOWNLOAD_STATUS_REMOTE_QUEUED=Mis en attente en position
+DOWNLOAD_STATUS_REMOTE_QUEUED=En file d'attente, position
 DOWNLOAD_STATUS_HASHING=Verifie l'intégrité du fichier...
 DOWNLOAD_STATUS_SAVING=Sauvegarde du fichier...
 DOWNLOAD_STATUS_PAUSING=Suspension en cours...
@@ -519,12 +521,16 @@ DOWNLOAD_APPLY_NEW_THEME_START=Vous avez téléchargé un nouveau thème intitulé "
 DOWNLOAD_APPLY_NEW_THEME_END=." Voulez-vous utiliser ce nouveau thème\u00a0?
 DOWNLOAD_POSSIBLE_HOSTS=Hôtes possibles
 DOWNLOAD_BUSY_HOSTS=Hôtes occupés
-DOWNLOAD_QUEUED_HOSTS=Mis en attente à distance
+DOWNLOAD_QUEUED_HOSTS=En file d'attente à distance
 DOWNLOAD_SEARCHING=Cherche d'autres sources...
 DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Désolé, LimeWire n'a pas pu relancer vos anciens chargements incomplets.
 DOWNLOAD_MAGNET_DIALOG=Désirez-vous télécharger
 DOWNLOAD_FROM=depuis
 DOWNLOAD_MAGNET_DIALOG_END=\u00a0?
+DOWNLOAD_PRIORITY_ACTIVE=Actif
+DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Rapproche en file d'attente le chargement prioritaire sélectionné.
+DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Éloigne en file d'attente le chargement non prioritaire sélectionné.
+DOWNLOAD_PRIORITY_PRIORITIZE=File d'attente
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -558,10 +564,10 @@ UPLOAD_TABLE_STRING_COMPLETE=Terminé
 UPLOAD_TABLE_STRING_BANNED_GREEDY=Agent glouton banni
 UPLOAD_TABLE_STRING_HASH_TREE=Transfert de l'arbre de hachage
 UPLOAD_TABLE_STRING_FNF=Fichier non trouvé
-UPLOAD_TABLE_STRING_QUEUED=Mis en attente
+UPLOAD_TABLE_STRING_QUEUED=En file d'attente
 UPLOAD_STRING_KBPSEC=Ko/s
 UPLOAD_ACTIVE=actif
-UPLOAD_QUEUED=en attente
+UPLOAD_QUEUED=en file d'attente
 
 ###################################################################
 # Key/value pairs for MonitorView
@@ -2181,7 +2187,7 @@ DOWNLOAD_RESPONSE_OK=Chargement accepté
 DOWNLOAD_BUSY=Rejeté (hôte trop occupé)
 DOWNLOAD_FILE_NOT_FOUND=Fichier non trouvé
 DOWNLOAD_NOT_SHARING=Fichier non partagé
-DOWNLOAD_QUEUED=Chargement mis en attente
+DOWNLOAD_QUEUED=Chargement en file d'attente
 DOWNLOAD_RANGE_UNAVAILABLE=Fragment indisponible
 DOWNLOAD_PROBLEM_READING_HEADER=Problème de lecture d'un entête
 DOWNLOAD_UNKNOWN_CODE=Code de réponse inconnu
@@ -2225,7 +2231,7 @@ UPLOAD_STAT_BANNED=Client banni
 UPLOAD_STAT_UNAVAILABLE_RANGE=Fragment indisponible
 UPLOAD_STAT_FILE_NOT_FOUND=Fichier non trouvé
 UPLOAD_STAT_FREELOADER=Profiteur rejeté
-UPLOAD_STAT_QUEUED=Transfert mis en attente
+UPLOAD_STAT_QUEUED=Transfert en file d'attente
 UPLOAD_STAT_NORMAL=Transfert normal
 UPLOAD_STAT_GET=Contenu HTTP (GET)
 UPLOAD_STAT_HEAD=Entêtes HTTP seuls (HEAD)
