make sure we do not send URN queries for magnets and that we warn the user if they try to download a magnet with only urns

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -527,6 +527,7 @@ DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your 
 DOWNLOAD_MAGNET_DIALOG=Would you like to download
 DOWNLOAD_FROM=from
 DOWNLOAD_MAGNET_DIALOG_END=?
+DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
 DOWNLOAD_PRIORITY_ACTIVE=Active
 DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
 DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
