--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -318,7 +318,8 @@ TABLES_DISPLAY_TOOLTIPS=Extended Tooltips
 ################################################################################
 # Keys/value pairs for SearchView stuff...
 ################################################################################
-SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
+SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.  Your search may not return any results until you connect.
+SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network.  Your search may not return many results until you are fully connected to the network.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 SEARCH_DOWNLOAD_BUTTON_TIP=Download All Selected Files
 SEARCH_WISHLIST_BUTTON_LABEL=Add To Wishlist
@@ -574,7 +575,7 @@ UPLOAD_QUEUED=queued
 # Key/value pairs for MonitorView
 ###################################################################
 MONITOR_VIEW_INCOMING_SEARCHES=Incoming Searches
-MONITOR_VIEW_ENABLE=Enable
+MONITOR_VIEW_ENABLE=Show
 MONITOR_VIEW_SHOW_LAST=Show last
 MONITOR_VIEW_SEARCHES=searches
 MONITOR_VIEW_LEAF_MESSAGE=Your client is a leaf node shielded by an Ultrapeer. Hence you will see few or no searches in the monitor window.
