--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.6
+# Messages Bundle for LimeWire 4.1.8
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -319,6 +319,7 @@ TABLES_DISPLAY_TOOLTIPS=Bulles d'aide étendues
 # Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_NOT_CONNECTED=Vous n'êtes pas connecté au réseau. Pour vous connecter, sélectionnez "Connecter" dans le menu "Fichiers".
+SEARCH_STILL_CONNECTING=LimeWire est encore en cours de connexion au réseau. Votre recherche pourrait ne pas retourner beaucoup de résultats tant que vous ne serez pas pleinement connecté au réseau.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Charger
 SEARCH_DOWNLOAD_BUTTON_TIP=Télécharge tous les fichiers sélectionnés.
 SEARCH_WISHLIST_BUTTON_LABEL=Ajout souhaité
@@ -521,12 +522,13 @@ DOWNLOAD_APPLY_NEW_THEME_START=Vous avez téléchargé un nouveau thème intitulé "
 DOWNLOAD_APPLY_NEW_THEME_END=." Voulez-vous utiliser ce nouveau thème\u00a0?
 DOWNLOAD_POSSIBLE_HOSTS=Hôtes possibles
 DOWNLOAD_BUSY_HOSTS=Hôtes occupés
-DOWNLOAD_QUEUED_HOSTS=En file d'attente à distance
-DOWNLOAD_SEARCHING=Cherche d'autres sources...
+DOWNLOAD_QUEUED_HOSTS=En file d'attente distante
+DOWNLOAD_SEARCHING=Localise d'autres sources...
 DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Désolé, LimeWire n'a pas pu relancer vos anciens chargements incomplets.
 DOWNLOAD_MAGNET_DIALOG=Désirez-vous télécharger
 DOWNLOAD_FROM=depuis
 DOWNLOAD_MAGNET_DIALOG_END=\u00a0?
+DOWNLOAD_HASH_ONLY_MAGNET=LimeWire ne pourra pas démarrer le chargement sélectionné tant que vous n'aurez pas initié une recherche de celui-ci.
 DOWNLOAD_PRIORITY_ACTIVE=Actif
 DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Rapproche en file d'attente le chargement prioritaire sélectionné.
 DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Éloigne en file d'attente le chargement non prioritaire sélectionné.
@@ -678,6 +680,8 @@ PLAYLIST_FILE_UNSUPPORTED=. Le type de fichier n'est pas reconnu.
 PLAYLIST_LINE_UNAVAILABLE=. Aucune ligne de sortie n'est disponible.
 PLAYLIST_FILE_MISSING=. Le fichier n'a pas été trouvé.
 PLAYLIST_FILE_CORRUPT=. Le fichier est corrompu.
+PLAYlIST_FILE_UNKNOWN=. Il y a une erreur inconnue dans le fichier audio.
+PLAYLIST_FILE_PARSE_PROBLEM=. Le format du fichier est incorrect ou non reconnu.
 
 ################################################################################
 # Key/value pairs for the LimeWire initialization wizard that is run
