--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -680,7 +680,7 @@ PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 PLAYLIST_LINE_UNAVAILABLE=. No line is available for output.
 PLAYLIST_FILE_MISSING=. The file cannot be found.
 PLAYLIST_FILE_CORRUPT=. The file is corrupt.
-PLAYlIST_FILE_UNKNOWN=. There is an unknown error with the audio file.
+PLAYLIST_FILE_UNKNOWN=. There is an unknown error with the audio file.
 PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
 
 ################################################################################
