--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -680,7 +680,7 @@ PLAYLIST_FILE_UNSUPPORTED=. Le type de fichier n'est pas reconnu.
 PLAYLIST_LINE_UNAVAILABLE=. Aucune ligne de sortie n'est disponible.
 PLAYLIST_FILE_MISSING=. Le fichier n'a pas été trouvé.
 PLAYLIST_FILE_CORRUPT=. Le fichier est corrompu.
-PLAYlIST_FILE_UNKNOWN=. Il y a une erreur inconnue dans le fichier audio.
+PLAYLIST_FILE_UNKNOWN=. Il y a une erreur inconnue dans le fichier audio.
 PLAYLIST_FILE_PARSE_PROBLEM=. Le format du fichier est incorrect ou non reconnu.
 
 ################################################################################
