reduce the impact of locale preferencing.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1450,9 +1450,8 @@ OPTIONS_CONNECT_PREF_SLIDER_MAX_LABEL=Always
 # in the advanced panel of the options window
 ################################################################################
 OPTIONS_CONNECT_LOCALE_PREF_TITLE=Locale Preferencing
-OPTIONS_CONNECT_LOCALE_PREF_LABEL=You can choose to preference connections that are advertising the same locale as you are. Choosing a large number of connection to preference may cause your client to take a long time to connect to the network.
+OPTIONS_CONNECT_LOCALE_PREF_LABEL=You can choose to preference hosts using the same language as you.
 OPTIONS_CONNECT_LOCALE_PREF_DISPLAY_CHECK_BOX_LABEL=Turn preferencing on:
-OPTIONS_CONNECT_LOCALE_PREF_NUM_LABEL=Number of connections to preference
 
 ################################################################################
 # Key/Value pairs for the options for setting the listening port
