--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.6
+# Messages Bundle for LimeWire 4.1.19
 # Specialization for: Danish - Denmark
 # Created by Jesper Stemann Andersen
 ################################################################################
@@ -34,6 +34,7 @@ HAS_TIPS_OF_THE_DAY=false
 ################################################################################
 # All other translated resources are missing. Look at the default English file.
 ################################################################################
+NO_TEXT=
 GENERAL_OK_BUTTON_LABEL=OK
 GENERAL_OK_BUTTON_TIP=Udfør operationen.
 GENERAL_CANCEL_BUTTON_LABEL=Annullér
@@ -318,6 +319,7 @@ MENU_HELP_ABOUT_ACCESSIBLE=Information om LimeWire.
 # Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
+#??? SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 SEARCH_DOWNLOAD_BUTTON_TIP=Download alle valgte filer.
 SEARCH_WISHLIST_BUTTON_LABEL=Tilføj til ønskelisten
@@ -407,6 +409,8 @@ DOWNLOAD_RESUME_BUTTON_TIP=Forsøg at genoptage download.
 #??? DOWNLOAD_SOURCES_BUTTON_TIP=Try to locate other sources for failed download.
 DOWNLOAD_CLEAR_BUTTON_LABEL=Fjern inaktive
 DOWNLOAD_CLEAR_BUTTON_TIP=Fjern inaktive downloads.
+#??? DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
+#??? DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Åbn
 LIBRARY_LAUNCH_BUTTON_TIP=Åbn valgte filer.
@@ -481,6 +485,7 @@ DOWNLOAD_POPUP_MENU_RESUME=Genoptag download
 DOWNLOAD_POPUP_MENU_LAUNCH=Åbn fil
 DOWNLOAD_POPUP_MENU_CHAT=Chat med vært
 DOWNLOAD_POPUP_MENU_BROWSE=Gennemse vært
+DOWNLOAD_PRIORITY_COLUMN=Prioritet
 DOWNLOAD_NAME_COLUMN=Navn
 DOWNLOAD_SIZE_COLUMN=Str.
 DOWNLOAD_STATUS_COLUMN=Status
@@ -510,6 +515,8 @@ DOWNLOAD_HOST_LABEL=vært
 DOWNLOAD_STATUS_REMOTE_QUEUED=Står i kø, som nummer
 DOWNLOAD_STATUS_HASHING=Verificerer filindhold...
 DOWNLOAD_STATUS_SAVING=Arkiverer fil...
+#??? DOWNLOAD_STATUS_PAUSING=Pausing...
+#??? DOWNLOAD_STATUS_PAUSED=Paused
 #??? DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 #??? DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 #??? DOWNLOAD_APPLY_NEW_THEME_END=". Would you like to use this new skin?
@@ -521,6 +528,11 @@ DOWNLOAD_STATUS_SAVING=Arkiverer fil...
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
 #??? DOWNLOAD_MAGNET_DIALOG_END=?
+#??? DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
+DOWNLOAD_PRIORITY_ACTIVE=Aktive
+#??? DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
+#??? DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
+DOWNLOAD_PRIORITY_PRIORITIZE=Kø
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -668,6 +680,8 @@ PLAYLIST_DIALOG_SAVE_SAVE=Arkivér
 #??? PLAYLIST_LINE_UNAVAILABLE=. No line is available for output.
 #??? PLAYLIST_FILE_MISSING=. The file cannot be found.
 #??? PLAYLIST_FILE_CORRUPT=. The file is corrupt.
+#??? PLAYLIST_FILE_UNKNOWN=. There is an unknown error with the audio file.
+#??? PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
 
 ################################################################################
 # Key/value pairs for the LimeWire initialization wizard that is run
@@ -1435,10 +1449,9 @@ OPTIONS_CONNECT_PREF_SLIDER_MAX_LABEL=Altid
 # Key/Value pairs for the options for setting connection locale preferences
 # in the advanced panel of the options window
 ################################################################################
-OPTIONS_CONNECT_LOCALE_PREF_TITLE=Locale preferencing
-OPTIONS_CONNECT_LOCALE_PREF_LABEL=You can choose to preference connections that are advertising the same locale as you are. Choosing a large number of connection to preference may cause your client to take a long time to connect to the network.
-OPTIONS_CONNECT_LOCALE_PREF_DISPLAY_CHECK_BOX_LABEL=Turn preferencing on:
-OPTIONS_CONNECT_LOCALE_PREF_NUM_LABEL=Number of connections to preference
+#??? OPTIONS_CONNECT_LOCALE_PREF_TITLE=Locale preferencing
+#??? OPTIONS_CONNECT_LOCALE_PREF_LABEL=You can choose to preference connections that are advertising the same locale as you are. Choosing a large number of connection to preference may cause your client to take a long time to connect to the network.
+#??? OPTIONS_CONNECT_LOCALE_PREF_DISPLAY_CHECK_BOX_LABEL=Turn preferencing on:
 
 ################################################################################
 # Key/Value pairs for the options for setting the listening port
