--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.6
+# Messages Bundle for LimeWire 4.1.19
 # Specialization for: Japanese (Nippongo) - Japan
 # Thanks to: Yuji T. Additions by Takanobu Torigoe & Shinada Atsushi, "heavy_baby".
 ################################################################################
@@ -34,6 +34,7 @@ HAS_TIPS_OF_THE_DAY=true
 ################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
+NO_TEXT=
 GENERAL_OK_BUTTON_LABEL=\u4e86\u89e3
 GENERAL_OK_BUTTON_TIP=\u64cd\u4f5c\u3092\u9069\u7528\u3059\u308b\u3002
 GENERAL_CANCEL_BUTTON_LABEL=\u53d6\u308a\u6d88\u3057
@@ -318,6 +319,7 @@ TABLES_DISPLAY_TOOLTIPS=\u30c4\u30fc\u30eb\u30c1\u30c3\u30d7\u3092\u8868\u793a
 # Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_NOT_CONNECTED=\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306b\u63a5\u7d9a\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002 \u63a5\u7d9a\u3059\u308b\u306b\u306f "\u30d5\u30a1\u30a4\u30eb" \u30e1\u30cb\u30e5\u30fc\u304b\u3089 "\u63a5\u7d9a" \u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+#??? SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
 SEARCH_DOWNLOAD_BUTTON_LABEL=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 SEARCH_DOWNLOAD_BUTTON_TIP=\u9078\u629e\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u3059\u3079\u3066\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3059\u308b
 SEARCH_WISHLIST_BUTTON_LABEL=\u63a2\u3057\u7269\u30ea\u30b9\u30c8\u306b\u8ffd\u52a0
@@ -407,6 +409,8 @@ DOWNLOAD_SOURCES_BUTTON_LABEL=\u30bd\u30fc\u30b9\u3092\u691c\u7d22
 DOWNLOAD_SOURCES_BUTTON_TIP=\u5931\u6557\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u306e\u305f\u3081\u306b\u30bd\u30fc\u30b9\u3092\u691c\u7d22\u3059\u308b
 DOWNLOAD_CLEAR_BUTTON_LABEL=\u7121\u52b9\u306a\u9805\u76ee\u3092\u6d88\u53bb
 DOWNLOAD_CLEAR_BUTTON_TIP=\u7121\u52b9\u306a\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u9664\u53bb\u3059\u308b
+#??? DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
+#??? DOWNLOAD_PAUSE_BUTTON_TIP=Pause the selected downloads.
 
 LIBRARY_LAUNCH_BUTTON_LABEL=\u958b\u304f
 LIBRARY_LAUNCH_BUTTON_TIP=\u9078\u629e\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u3092\u958b\u304f
@@ -481,6 +485,7 @@ DOWNLOAD_POPUP_MENU_RESUME=\u5f37\u5236\u30ec\u30b8\u30e5\u30fc\u30e0
 DOWNLOAD_POPUP_MENU_LAUNCH=\u30d5\u30a1\u30a4\u30eb\u3092\u958b\u304f
 DOWNLOAD_POPUP_MENU_CHAT=\u30db\u30b9\u30c8\u3068\u30c1\u30e3\u30c3\u30c8
 DOWNLOAD_POPUP_MENU_BROWSE=\u30db\u30b9\u30c8\u3092\u53c2\u7167
+#??? DOWNLOAD_PRIORITY_COLUMN=Priority
 DOWNLOAD_NAME_COLUMN=\u540d\u524d
 DOWNLOAD_SIZE_COLUMN=\u5bb9\u91cf
 DOWNLOAD_STATUS_COLUMN=\u72b6\u614b
@@ -510,6 +515,8 @@ DOWNLOAD_HOST_LABEL=\u30db\u30b9\u30c8
 DOWNLOAD_STATUS_REMOTE_QUEUED=\u6b21\u306e\u9806\u756a\u306b\u4e88\u7d04\u3055\u308c\u307e\u3057\u305f
 DOWNLOAD_STATUS_HASHING=\u30d5\u30a1\u30a4\u30eb\u5185\u5bb9\u3092\u78ba\u8a8d\u4e2d...
 DOWNLOAD_STATUS_SAVING=\u30d5\u30a1\u30a4\u30eb\u3092\u4fdd\u5b58\u4e2d...
+#??? DOWNLOAD_STATUS_PAUSING=Pausing...
+#??? DOWNLOAD_STATUS_PAUSED=Paused
 DOWNLOAD_AWAITING_SOURCES=\u3082\u3063\u3068\u5177\u4f53\u7684\u306a\u691c\u7d22\u304c\u5fc5\u8981\u3067\u3059...
 DOWNLOAD_APPLY_NEW_THEME_START=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u305f\u65b0\u3057\u3044\u30b9\u30ad\u30f3\u3092\u65e9\u901f\u4f7f\u3044\u307e\u3059\u304b\u3002
 DOWNLOAD_APPLY_NEW_THEME_END=
@@ -521,6 +528,11 @@ DOWNLOAD_COULD_NOT_READ_SNAPSHOT=\u4ee5\u524d\u306e\u30c0\u30a6\u30f3\u30ed\u30f
 DOWNLOAD_MAGNET_DIALOG=\u6b21\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u307e\u3059\u304b\u3002
 DOWNLOAD_FROM=
 DOWNLOAD_MAGNET_DIALOG_END=
+#??? DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
+#??? DOWNLOAD_PRIORITY_ACTIVE=Active
+#??? DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
+#??? DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
+#??? DOWNLOAD_PRIORITY_PRIORITIZE=Queue
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -668,6 +680,8 @@ PLAYLIST_FILE_UNSUPPORTED=\u30d5\u30a1\u30a4\u30eb\u5f62\u5f0f\u3092\u8a8d\u8b58
 PLAYLIST_LINE_UNAVAILABLE=\u51fa\u529b\u3059\u308b\u884c\u304c\u3042\u308a\u307e\u305b\u3093\u3002
 PLAYLIST_FILE_MISSING=\u30d5\u30a1\u30a4\u30eb\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3002
 PLAYLIST_FILE_CORRUPT=\u30d5\u30a1\u30a4\u30eb\u304c\u58ca\u308c\u3066\u3044\u307e\u3059\u3002
+#??? PLAYLIST_FILE_UNKNOWN=. There is an unknown error with the audio file.
+#??? PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
 
 ################################################################################
 # Key/value pairs for the LimeWire initialization wizard that is run
@@ -1438,7 +1452,6 @@ OPTIONS_CONNECT_PREF_SLIDER_MAX_LABEL=\u5e38\u306b
 OPTIONS_CONNECT_LOCALE_PREF_TITLE=\u512a\u5148\u3059\u308b\u5730\u57df
 OPTIONS_CONNECT_LOCALE_PREF_LABEL=\u540c\u3058\u5730\u57df\u3068\u3057\u3066\u7533\u544a\u3057\u3066\u3044\u308b\u30db\u30b9\u30c8\u306b\u63a5\u7d9a\u3059\u308b\u6570\u3092\u9078\u629e\u3067\u304d\u307e\u3059\u3002 \u512a\u5148\u3059\u308b\u63a5\u7d9a\u306e\u6570\u304c\u591a\u304f\u306a\u308b\u3068\u3001 \u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306b\u63a5\u7d9a\u3059\u308b\u306e\u306b\u6642\u9593\u304c\u304b\u304b\u308a\u307e\u3059\u3002
 OPTIONS_CONNECT_LOCALE_PREF_DISPLAY_CHECK_BOX_LABEL=\u512a\u5148\u8a2d\u5b9a\u3092\u6709\u52b9\uff1a
-OPTIONS_CONNECT_LOCALE_PREF_NUM_LABEL=\u512a\u5148\u3059\u308b\u63a5\u7d9a\u6570
 
 ################################################################################
 # Key/Value pairs for the options for setting the listening port
