--- a/lib/messagebundles/MessagesBundle_ms.properties
+++ b/lib/messagebundles/MessagesBundle_ms.properties
@@ -1,10 +1,10 @@
 ################################################################################
-# Messages Bundle for LimeWire 2.8.5
+# Messages Bundle for LimeWire 4.1.19
 # Specialization for: Malay - Malaysia
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=ms
-LOCALE_LANGUAGE_NAME=Bahasa Malaysia
+LOCALE_LANGUAGE_NAME=Bahasa Melayu
 LOCALE_COUNTRY_CODE=
 LOCALE_COUNTRY_NAME=Malaysia
 LOCALE_VARIANT_CODE=
