--- a/lib/messagebundles/MessagesBundle_cs.properties
+++ b/lib/messagebundles/MessagesBundle_cs.properties
@@ -1,12 +1,12 @@
 ################################################################################
-# Messages Bundle for LimeWire 2.8.5
+# Messages Bundle for LimeWire 4.1.19
 # Specialization for: Czech - Czech Republik
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=cs
 LOCALE_LANGUAGE_NAME=\u010ce\u0161tina
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=\u010cesk\u00e1 republika
+LOCALE_COUNTRY_NAME=\u010cesk\u00e1 Republika
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
